Make sure that gradient is on first section of home page when page first loads. Fix border radius problem on Safari tablet version. Adjust margin on textbox on Saturday Skin brand page. Make sure that brand links on home page don't have black hover color.

--- a/client/js/app.scss
+++ b/client/js/app.scss
@@ -29,8 +29,8 @@ a {
 	text-decoration: none !important;
 	color: black;
 
-	&:hover:not(.aurous-bread),
-	&:focus:not(.aurous-bread) {
+	&:hover:not(.aurous-bread, .home_link_to_brands),
+	&:focus:not(.aurous-bread, .home_link_to_brands) {
 		text-decoration: none;
 		color: #000000 !important;
 	}
@@ -156,6 +156,10 @@ p {
   -ms-border-radius: #{$border-radiuss}px;
   -o-border-radius: #{$border-radiuss}px;
   border-radius: #{$border-radiuss}px;
+}
+
+input {
+	border-radius: none;
 }
 
 // input:-webkit-autofill {
