--- a/client/js/home/home.scss
+++ b/client/js/home/home.scss
@@ -149,6 +149,10 @@ div.first-page-fade-in {
 //     height:100%;
 // }
 
+.home_link_to_brands:hover {
+  color: #FFFFFF !important;
+}
+
 .fullscreen,
 .content-a {
     width:100%;
