--- a/client/js/saturday_skin/saturday_skin.scss
+++ b/client/js/saturday_skin/saturday_skin.scss
@@ -306,7 +306,7 @@
       width: 33.4vw;
     //   background-color: #FFFFFF;
       margin: 0 5vw 0 0;
-      margin-top: calc(100vw * 0.41);
+      margin-top: calc(100vw * 0.43);
       float: right;
       padding: 2.4vw 2vw 1vw 2vw;
 
@@ -318,7 +318,7 @@
       .tagline {
         font-size: 2.8vw;
         clear: both;
-        margin: 0;
+        margin: 0 0 11px 0;
       }
     }
 
